# llama-toolboxes-cockpit

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: lint.yml
src/: benchmark_runner.py  config.py  main.py  model_manager.py  server_runner.py  toolbox_manager.py  widgets.py
src/assets/: models.json  toolboxes.json
